# devBlas

./: CMakeLists.txt  bench_driver.c
include/devblas/: naive_gemm.h  sgemm.h
include/devblas/benchmarking/: bench.h  utils.h
include/devblas/c_api/: blas.h
src/: CMakeLists.txt  sgemm.cc
src/benchmarking/: bench.cc
src/c_api/: blas.cc
tests/: CMakeLists.txt  test_sgemm.cc
